--- a/layout/base.j2
+++ b/layout/base.j2
@@ -69,7 +69,16 @@
     </section>
 
     <footer>
-        Powered by <a href="http://ringce.com/hyde">hyde</a>.
+    <p>
+    Powered by <a href="https://github.com/hyde/hyde">hyde</a>.
+    <a href="https://git.subiron.org/cgit.cgi/www.subiron.org/">Website source</a>.
+    </p>
+    <p>
+    This website is licensed under a <a href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0</a>.
+    </p>
+    <p>
+    <img src="http://i.creativecommons.org/l/by/3.0/88x31.png">
+    </p>
     </footer>
 
     {% endblock body %}
