--- a/content/media/css/style.css
+++ b/content/media/css/style.css
@@ -2,6 +2,15 @@ body {
     padding-top: 60px;
     background-color: #eee;
     font-family: 'Noticia Text','Droid Serif',Georgia,serif,'Lucida Grande','Lucida Sans Unicode','Arial Unicode MS';
+    padding-bottom: 0px;
+}
+
+footer {
+    background-color: #F5F5F5;
+    border-top: 1px solid #E5E5E5;
+    margin-top: 70px;
+    padding: 30px 0;
+    text-align: center;
 }
 
 .well.content {
