--- a/layout/base.j2
+++ b/layout/base.j2
@@ -36,9 +36,9 @@
           <a class="brand" href="/">{{ site_title }}</a>
           <ul class="nav">
             {% for menu_item in menu %}
-            <li{% if menu_item.url in resource.full_url %} class="active"{% endif %}>
+            <li{% if site.content.resource_from_relative_path(menu_item.url).url == resource.url or (menu_item.url == "/" and resource.url ==  "/index.html") %} class="active"{% endif %}>
               <a href="{{ menu_item.url }}">
-              {% if menu_item.icon %}
+                {% if menu_item.icon %}
               <i class="icon-{{menu_item.icon}} icon-white"></i>
               {% endif %}
               {{ menu_item.name }}
@@ -88,12 +88,11 @@
     {% block js %}
 
     {% block jquery %}
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.js"></script>
-    <script>window.jQuery || document.write('<script src="js/libs/jquery-1.5.1.min.js">\x3C/script>')</script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.js"></script>
     {% endblock jquery %}
 
     {% block bootstrap %}
-    <!--<script src="{{ media_url('js/bootstrap.js') }}"></script>-->
+    <script src="{{ media_url('js/bootstrap.js') }}"></script>
     {% endblock bootstrap %}
 
     {% block scripts %}
