--- a/layout/base.j2
+++ b/layout/base.j2
@@ -93,6 +93,7 @@
 
     {% block bootstrap %}
     <script src="{{ media_url('js/bootstrap.js') }}"></script>
+    <script src="{{ media_url('js/bootstrap-tab-bookmark.js') }}"></script>
     {% endblock bootstrap %}
 
     {% block scripts %}
