Added profile aside

--- a/layout/base.j2
+++ b/layout/base.j2
@@ -62,7 +62,7 @@
         </div>
         <aside class="span3">
         <div class="well content">
-          tata
+          {% include "aside-profile.j2" %}
         </div>
         </aside>
       </div>
