--- a/layout/aside-profile.j2
+++ b/layout/aside-profile.j2
@@ -1,2 +1,19 @@
-<h2>Guillaume Subiron</h2>
+<div class="aside-profile">
+  <h3>Guillaume Subiron</h3>
+
+  <p>Secrétaire de la <a href="http://www.ffdn.org/">Fédération FDN</a> et du FAI associatif <a href="http://www.aquilenet.fr/">Aquilenet</a>.</p>
+
+  <a class="btn btn-small" href="/contact">Me contacter</a>
+
+  <div>
+  </div>
+
+  <br>
+
+  <div>
+    <a class="twitter-timeline"  href="https://twitter.com/gsubiron"  data-widget-id="348066359814549504">Tweets de @gsubiron</a>
+    <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+  </div>
+
+</div>
 
