Added bootstrap in footer

--- a/layout/footer.j2
+++ b/layout/footer.j2
@@ -1,5 +1,5 @@
 <p>
-Powered by <a href="https://github.com/hyde/hyde">hyde</a>.
+Powered by <a href="https://github.com/hyde/hyde">hyde</a> and <a href="http://twitter.github.com/bootstrap">Boostrap</a>.
 <a href="http://git.subiron.org/cgit.cgi/www.subiron.org/">Website source</a>.
 </p>
 <p>
