--- a/layout/base.j2
+++ b/layout/base.j2
@@ -17,7 +17,8 @@
     <link rel="stylesheet" href="{{ media_url('css/bootstrap.min.css') }}">
     <link rel="stylesheet" href="{{ media_url('css/bootstrap-responsive.min.css') }}">
     <link rel="stylesheet" href="{{ media_url('css/style.css') }}">
-    <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Inconsolata|Source+Sans+Pro:700|Noticia+Text:400,400italic' type='text/css'>
+    <!--<link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Inconsolata|Source+Sans+Pro:700|Noticia+Text:400,400italic' type='text/css'>-->
+    <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Inconsolata|Source+Sans+Pro:400,600,700,900,400italic|Crimson+Text:400,600|Noticia+Text:400,400italic' type='text/css'>
     {% endblock basecss %}
     {% block css %}{% endblock css %}
   
