--- a/content/media/css/style.css
+++ b/content/media/css/style.css
@@ -3,6 +3,7 @@ body {
     background-color: #eee;
     font-family: "Source Code Pro","Helvetica","Arial",sans-serif;
     padding-bottom: 0px;
+    font-size: 15px;
 }
 
 h1, h2, h3 {
