--- a/layout/aside-profile.j2
+++ b/layout/aside-profile.j2
@@ -2,6 +2,7 @@
   <h3>Guillaume Subiron</h3>
 
   <p>Secrétaire de la <a href="http://www.ffdn.org/">Fédération FDN</a> et du FAI associatif <a href="http://www.aquilenet.fr/">Aquilenet</a>.</p>
+  <p>Directeur de la société <a href="http://www.sysnove.fr/">Sysnove</a>.</p>
 
   <a class="btn btn-small" href="/contact">Me contacter</a>
 
